--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div class="container">
+  <section>
+    <router-outlet></router-outlet>
+  </section>
+</div>
 <app-footer></app-footer>
