--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,19 @@
 <nav class="nav-extended">
-  <div class="nav-wrapper">
-    <a href="#" class="brand-logo">Tracy</a>
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
-    </ul>
-  </div>
-  <div class="nav-content">
-    <ul class="tabs tabs-transparent">
-      <li class="tab"><a routerLink="/" routerLinkActive="active">Test 1</a></li>
-      <li class="tab"><a routerLink="/about" routerLinkActive="active">Test 2</a></li>
-    </ul>
+  <div class="container">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">iamtracy.com</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="sass.html">WordPress</a></li>
+        <li><a href="badges.html">JavaScript</a></li>
+        <li><a href="collapsible.html">NodeJS</a></li>
+      </ul>
+    </div>
+    <div class="nav-content">
+      <ul class="tabs tabs-transparent">
+        <li class="tab"><a routerLink="/" routerLinkActive="active">Home</a></li>
+        <li class="tab"><a routerLink="/work" routerLinkActive="active">Work</a></li>
+        <li class="tab"><a routerLink="/about" routerLinkActive="active">About</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
