--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,15 +1,76 @@
 <div class="row">
-  <div class="col s12 m8">
-    <i class="small material-icons">person_pin</i>
-    <span class="flow-text">Hello, I am Tracy</span>
+  <div class="col s12 m8 intro">
+    <div class="intro-content intro-section">
+      <i class="small material-icons">person_pin</i>
+      <span class="flow-text">Hello, I am Tracy</span>
+    </div>
     <p>
       Pitchfork flexitarian gastropub, pour-over kickstarter next level neutra four dollar toast cliche. Raw denim vaporware art party, disrupt vinyl woke thundercats kinfolk chia air plant forage mustache. Fanny pack squid vaporware, retro offal mlkshk franzen.
       Austin pug mixtape pinterest snackwave pabst. Twee normcore trust fund photo booth banjo. Kale chips swag keffiyeh YOLO, sartorial chicharrones kombucha mustache freegan. Humblebrag narwhal ramps distillery.
     </p>
   </div>
-  <div class="col s12 m4">
-    <i class="small material-icons">location_on</i>
-    <span class="flow-text">Chicago, Ill</span>
-    <p>I'm came for the weather, but I stayed for the beaches.</p>
+  <div class="col s12 m4 intro">
+    <div class="intro-location intro-section">
+      <i class="small material-icons">location_on</i>
+      <span class="flow-text">Chicago, Ill</span>
+    </div>
+    <p>I'm came for the weather, but I stay for the beaches.</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col s12 intro">
+    <div class="intro-services intro-section">
+      <div class="intro-content">
+        <i class="small material-icons">business</i>
+        <span class="flow-text">Services</span>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="http://lorempixel.com/output/fashion-q-c-1000-750-7.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">WordPess<i class="material-icons right">more_vert</i></span>
+        <p>35-60/hr</p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title">Card Title<i class="material-icons right">close</i></span>
+        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="http://lorempixel.com/output/fashion-q-c-1000-750-7.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">Nodejs<i class="material-icons right">more_vert</i></span>
+        <p>50-75/hr</p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+        <p>50-75/hr</p>
+      </div>
+    </div>
+  </div>
+  <div class="col s4">
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="http://lorempixel.com/output/fashion-q-c-1000-750-7.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">Debugging<i class="material-icons right">more_vert</i></span>
+        <p>Varies</p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Debugging<i class="material-icons right">close</i></span>
+        <p>Varies</p>
+      </div>
+    </div>
   </div>
 </div>
