--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,75 +1,151 @@
-<div class="row">
-  <div class="col s12 m8 intro">
-    <div class="intro-content intro-section">
-      <i class="small material-icons">person_pin</i>
-      <span class="flow-text">Hello, I am Tracy</span>
-    </div>
-    <p>
-      Pitchfork flexitarian gastropub, pour-over kickstarter next level neutra four dollar toast cliche. Raw denim vaporware art party, disrupt vinyl woke thundercats kinfolk chia air plant forage mustache. Fanny pack squid vaporware, retro offal mlkshk franzen.
-      Austin pug mixtape pinterest snackwave pabst. Twee normcore trust fund photo booth banjo. Kale chips swag keffiyeh YOLO, sartorial chicharrones kombucha mustache freegan. Humblebrag narwhal ramps distillery.
-    </p>
-  </div>
-  <div class="col s12 m4 intro">
-    <div class="intro-location intro-section">
-      <i class="small material-icons">location_on</i>
-      <span class="flow-text">Chicago, Ill</span>
-    </div>
-    <p>I'm came for the weather, but I stay for the beaches.</p>
-  </div>
-</div>
-<div class="row">
-  <div class="col s12 intro">
-    <div class="intro-services intro-section">
-      <div class="intro-content">
-        <i class="small material-icons">business</i>
-        <span class="flow-text">Services</span>
+<div class="home-section">
+  <div class="row">
+    <div class="col s12 m8">
+      <div class="intro">
+        <div class="intro-content intro-section">
+          <i class="material-icons">person_pin</i>
+          <span class="flow-text">Hello, I am Tracy</span>
+        </div>
       </div>
+      <p>
+        Pitchfork flexitarian gastropub, pour-over kickstarter next level neutra four dollar toast cliche. Raw denim vaporware art party, disrupt vinyl woke thundercats kinfolk chia air plant forage mustache. Fanny pack squid vaporware, retro offal mlkshk franzen.
+        Austin pug mixtape pinterest snackwave pabst. Twee normcore trust fund photo booth banjo. Kale chips swag keffiyeh YOLO, sartorial chicharrones kombucha mustache freegan. Humblebrag narwhal ramps distillery.
+      </p>
+    </div>
+    <div class="col s12 m4">
+      <div class="intro">
+        <div class="intro-location intro-section">
+          <i class="material-icons">location_on</i>
+          <span class="flow-text">Chicago, Il</span>
+        </div>
+      </div>
+      <p>I came for the weather, but I stay for the beaches.</p>
     </div>
   </div>
 </div>
-<div class="row">
-  <div class="col s4">
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="http://lorempixel.com/output/fashion-q-c-1000-750-7.jpg">
-      </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">WordPess<i class="material-icons right">more_vert</i></span>
-        <p>35-60/hr</p>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title">Card Title<i class="material-icons right">close</i></span>
-        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+<div class="home-section">
+  <div class="row">
+    <div class="col s12">
+      <div class="intro">
+        <div class="intro-services intro-section">
+          <div class="intro-content">
+            <i class="material-icons">business</i>
+            <span class="flow-text">Services</span>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col s4">
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="http://lorempixel.com/output/fashion-q-c-1000-750-7.jpg">
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="../../assets/img/wp.png">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator">WordPess<i class="material-icons right">more_vert</i></span>
+          <p>35-60/hr</p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title">WordPess Services<i class="material-icons right">close</i></span>
+          <ul class="collection">
+            <li class="collection-item">Custom Theme Development</li>
+            <li class="collection-item">Customize Existing Theme</li>
+            <li class="collection-item">Content Updates</li>
+            <li class="collection-item">SEO</li>
+          </ul>
+        </div>
       </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">Nodejs<i class="material-icons right">more_vert</i></span>
-        <p>50-75/hr</p>
+    </div>
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="../../assets/img/node.png">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator">Nodejs<i class="material-icons right">more_vert</i></span>
+          <p>50-75/hr</p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title">MVC Development<i class="material-icons right">close</i></span>
+          <ul class="collection">
+            <li class="collection-item">Angular</li>
+            <li class="collection-item">React</li>
+            <li class="collection-item">Nodejs</li>
+            <li class="collection-item">Express</li>
+          </ul>
+        </div>
       </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-        <p>50-75/hr</p>
+    </div>
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src="../../assets/img/dev.png">
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4">General Development<i class="material-icons right">more_vert</i></span>
+          <p>50-60/hr</p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4">General Development<i class="material-icons right">close</i></span>
+          <ul class="collection">
+            <li class="collection-item">Form Validation</li>
+            <li class="collection-item">JQuery Plugin Integration</li>
+            <li class="collection-item">Reponsive Pages</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
-  <div class="col s4">
-    <div class="card">
-      <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="http://lorempixel.com/output/fashion-q-c-1000-750-7.jpg">
+</div>
+<div class="home-section">
+  <div class="row">
+    <div class="col s12">
+      <div class="intro">
+        <div class="intro-services intro-section">
+          <div class="intro-content">
+            <i class="material-icons">label_outline</i>
+            <span class="flow-text">Philosopy</span>
+          </div>
+        </div>
       </div>
-      <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">Debugging<i class="material-icons right">more_vert</i></span>
-        <p>Varies</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s12 m3">
+      <div class="card-panel teal">
+        <i class="large material-icons">web</i>
+        <h4>Responsiveness</h4>
+        <span class="white-text">
+        In the year 2017, websites should be optimized for desktop, table, and mobile devices.
+      </span>
       </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">Debugging<i class="material-icons right">close</i></span>
-        <p>Varies</p>
+    </div>
+    <div class="col s12 m3">
+      <div class="card-panel teal">
+        <i class="large material-icons">settings_input_antenna</i>
+        <h4>Branding</h4>
+        <span class="white-text">
+        An online presence is essential. A website should extend a brand and product.
+      </span>
+      </div>
+    </div>
+    <div class="col s12 m3">
+      <div class="card-panel teal">
+        <i class="large material-icons">perm_identity</i>
+        <h4>Service</h4>
+        <span class="white-text">
+        Clients should expect quality service from a developer who's passionate about their trade.
+      </span>
+      </div>
+    </div>
+    <div class="col s12 m3">
+      <div class="card-panel teal">
+        <i class="large material-icons">av_timer</i>
+        <h4>Performance</h4>
+        <span class="white-text">
+        A website should run on as little code possible. Prior to launch, all assets should be optimized.
+      </span>
       </div>
     </div>
   </div>
