--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,15 +4,15 @@
       <a href="#" class="brand-logo">iamtracy.com</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html">WordPress</a></li>
-        <li><a href="badges.html">JavaScript</a></li>
         <li><a href="collapsible.html">NodeJS</a></li>
+        <li><a href="badges.html">JavaScript</a></li>
       </ul>
     </div>
     <div class="nav-content">
       <ul class="tabs tabs-transparent">
         <li class="tab"><a routerLink="/" routerLinkActive="active">Home</a></li>
         <li class="tab"><a routerLink="/work" routerLinkActive="active">Work</a></li>
-        <li class="tab"><a routerLink="/about" routerLinkActive="active">About</a></li>
+        <!--<li class="tab"><a routerLink="/about" routerLinkActive="active">About</a></li>-->
       </ul>
     </div>
   </div>
