--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -1,12 +1,11 @@
-<div class="col s12 m6">
+<div class="col s12 m4">
   <div class="card github">
     <div class="card-content">
       <span class="card-title">{{card.name}} | {{card.language}}</span>
       <p>{{card.description}}</p>
     </div>
     <div class="card-action">
-      <a href="#">View Live Site</a>
-      <a href="{{card.html_url}}" target="_blank">View Source Code</a>
+      <a href="{{card.html_url}}" target="_blank"><i class="material-icons">code</i></a>
     </div>
   </div>
 </div>
