--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,17 +1,23 @@
 <nav class="nav-extended">
   <div class="container">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">iamtracy.com</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="sass.html">WordPress</a></li>
-        <li><a href="collapsible.html">NodeJS</a></li>
-        <li><a href="badges.html">JavaScript</a></li>
-      </ul>
+
+      <div class="profile">
+        <img src="../../assets/img/profile.png" alt="" class="circle responsive-img">
+        <a href="#" class="brand-logo">iamtracy.com</a>
+      </div>
+
+
     </div>
     <div class="nav-content">
       <ul class="tabs tabs-transparent">
         <li class="tab"><a routerLink="/" routerLinkActive="active">Home</a></li>
         <li class="tab"><a routerLink="/work" routerLinkActive="active">Work</a></li>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li class="tab"><a href="sass.html">WordPress</a></li>
+          <li class="tab"><a href="collapsible.html">NodeJS</a></li>
+          <li class="tab" class="tab"><a href="badges.html">JavaScript</a></li>
+        </ul>
         <!--<li class="tab"><a routerLink="/about" routerLinkActive="active">About</a></li>-->
       </ul>
     </div>
