--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,20 @@ main {
 .tabs.tabs-transparent .indicator {
   background-color: #DDB938;
 }
+.profile {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.profile img {
+  margin: 2.5rem auto 0rem;
+}
+nav .brand-logo {
+  position: relative;
+  text-align: center;
+  margin-bottom: 1.25rem;
+}
 
 /*--------------------------------------------------------------
 # About
