--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-section">
   <div class="row">
-    <div class="col s12 m8">
+    <div class="col s12 m6 l8">
       <div class="intro">
         <div class="intro-content intro-section">
           <i class="material-icons">person_pin</i>
@@ -12,7 +12,7 @@
         Austin pug mixtape pinterest snackwave pabst. Twee normcore trust fund photo booth banjo. Kale chips swag keffiyeh YOLO, sartorial chicharrones kombucha mustache freegan. Humblebrag narwhal ramps distillery.
       </p>
     </div>
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="intro">
         <div class="intro-location intro-section">
           <i class="material-icons">location_on</i>
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="../../assets/img/wp.png">
@@ -57,7 +57,7 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="../../assets/img/node.png">
@@ -77,17 +77,17 @@
         </div>
       </div>
     </div>
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image waves-effect waves-block waves-light">
           <img class="activator" src="../../assets/img/dev.png">
         </div>
         <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">General Development<i class="material-icons right">more_vert</i></span>
+          <span class="card-title activator">General Development<i class="material-icons right">more_vert</i></span>
           <p>50-60/hr</p>
         </div>
         <div class="card-reveal">
-          <span class="card-title grey-text text-darken-4">General Development<i class="material-icons right">close</i></span>
+          <span class="card-title">General Development<i class="material-icons right">close</i></span>
           <ul class="collection">
             <li class="collection-item">Form Validation</li>
             <li class="collection-item">JQuery Plugin Integration</li>
@@ -112,26 +112,26 @@
     </div>
   </div>
   <div class="row">
-    <div class="col s12 m3">
-      <div class="card-panel teal">
+    <div class="col s12 m6 l3">
+      <div class="card-panel teal darken-1">
         <i class="large material-icons">web</i>
-        <h4>Responsiveness</h4>
+        <h4>Responsive</h4>
         <span class="white-text">
         In the year 2017, websites should be optimized for desktop, table, and mobile devices.
       </span>
       </div>
     </div>
-    <div class="col s12 m3">
-      <div class="card-panel teal">
+    <div class="col s12 m6 l3">
+      <div class="card-panel teal darken-1">
         <i class="large material-icons">settings_input_antenna</i>
         <h4>Branding</h4>
         <span class="white-text">
-        An online presence is essential. A website should extend a brand and product.
+        In today's market, an online presence is essential. A website is key to extending a brand.
       </span>
       </div>
     </div>
-    <div class="col s12 m3">
-      <div class="card-panel teal">
+    <div class="col s12 m6 l3">
+      <div class="card-panel teal darken-1">
         <i class="large material-icons">perm_identity</i>
         <h4>Service</h4>
         <span class="white-text">
@@ -139,8 +139,8 @@
       </span>
       </div>
     </div>
-    <div class="col s12 m3">
-      <div class="card-panel teal">
+    <div class="col s12 m6 l3">
+      <div class="card-panel teal darken-1">
         <i class="large material-icons">av_timer</i>
         <h4>Performance</h4>
         <span class="white-text">
