--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -19,7 +19,7 @@
   </div>
 
   <div class="row">
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image">
           <img src="../../assets/img/zorbas.png">
@@ -29,11 +29,11 @@
           </p>
         </div>
         <div class="card-action">
-          <a href="http://www.mikezorbas.com"><i class="material-icons">language</i></a>
+          <a href="http://www.mikezorbas.com" target="_blank"><i class="material-icons">language</i></a>
         </div>
       </div>
     </div>
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image">
           <img src="../../assets/img/brian.png">
@@ -42,12 +42,12 @@
           <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
         </div>
         <div class="card-action">
-          <a href="http://brianweberdesign.com/"><i class="material-icons">language</i></a>
+          <a href="http://brianweberdesign.com/" target="_blank"><i class="material-icons">language</i></a>
         </div>
       </div>
     </div>
 
-    <div class="col s12 m4">
+    <div class="col s12 m6 l4">
       <div class="card">
         <div class="card-image">
           <img src="../../assets/img/xpo.png">
@@ -56,10 +56,25 @@
           <p>A company resource, XPOCAST Guide walks INXPO clients through the process of presenting on a live or recorded webcasting session.</p>
         </div>
         <div class="card-action">
-          <a href="http://inxpo-guide.netlify.com/index.html"><i class="material-icons">language</i></a>
+          <a href="http://inxpo-guide.netlify.com/index.html" target="_blank"><i class="material-icons">language</i></a>
         </div>
       </div>
     </div>
+
+    <div class="col s12 m6 l4">
+      <div class="card">
+        <div class="card-image">
+          <img src="../../assets/img/xpo.png">
+        </div>
+        <div class="card-content">
+          <p>A company resource, XPOCAST Guide walks INXPO clients through the process of presenting on a live or recorded webcasting session.</p>
+        </div>
+        <div class="card-action">
+          <a href="http://inxpo-guide.netlify.com/index.html" target="_blank"><i class="material-icons">language</i></a>
+        </div>
+      </div>
+    </div>
+
   </div>
 
   <div class="row">
