--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,8 +8,7 @@
         </div>
       </div>
       <p>
-        Pitchfork flexitarian gastropub, pour-over kickstarter next level neutra four dollar toast cliche. Raw denim vaporware art party, disrupt vinyl woke thundercats kinfolk chia air plant forage mustache. Fanny pack squid vaporware, retro offal mlkshk franzen.
-        Austin pug mixtape pinterest snackwave pabst. Twee normcore trust fund photo booth banjo. Kale chips swag keffiyeh YOLO, sartorial chicharrones kombucha mustache freegan. Humblebrag narwhal ramps distillery.
+        With years of industry experience, I bring forward passion and technical knowledge to the freelance industry. Let's build something great.
       </p>
     </div>
     <div class="col s12 m6 l4">
