--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -39,24 +39,10 @@
           <img src="../../assets/img/brian.png">
         </div>
         <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+          <p>A WordPress theme build from scratch built for a freelance designer. The user is able to navigate through ample amount of images at ease.</p>
         </div>
         <div class="card-action">
           <a href="http://brianweberdesign.com/" target="_blank"><i class="material-icons">language</i></a>
-        </div>
-      </div>
-    </div>
-
-    <div class="col s12 m6 l4">
-      <div class="card">
-        <div class="card-image">
-          <img src="../../assets/img/xpo.png">
-        </div>
-        <div class="card-content">
-          <p>A company resource, XPOCAST Guide walks INXPO clients through the process of presenting on a live or recorded webcasting session.</p>
-        </div>
-        <div class="card-action">
-          <a href="http://inxpo-guide.netlify.com/index.html" target="_blank"><i class="material-icons">language</i></a>
         </div>
       </div>
     </div>
