--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,22 +2,22 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+        <h5 class="white-text">Freelance Developer</h5>
+        <p class="grey-text text-lighten-4">Tracy is a Chicago-based web developer.</p>
       </div>
       <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
+        <h5 class="white-text">Contact</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+          <li><a class="grey-text text-lighten-3" href="linkedin.com/in/tracybryanlee" target="_blank">LinkedIn</a></li>
+          <li><a class="grey-text text-lighten-3" href="mailto:tleecoding@gmail.com?subject=Freelance%20Development">Email</a></li>
         </ul>
       </div>
     </div>
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © 2017 Copyright Text
-      <a class="grey-text text-lighten-4 right" href="https://wordpress.org/">
-					Made with love by tleecoding				</a>
+      © 2017
+      <a class="grey-text text-lighten-4 right" href="https://wordpress.org/">Made with &#10084; by tleecoding</a>
     </div>
   </div>
 </footer>
