post deploy edits

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -18,7 +18,7 @@
           <span class="flow-text">Chicago, Il</span>
         </div>
       </div>
-      <p>I came for the weather, but I stay for the beaches.</p>
+      <p>Born and rasied in Ohio, 3 year resident of Chicago.</p>
     </div>
   </div>
 </div>
