--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -25,7 +25,7 @@
           <img src="../../assets/img/zorbas.png">
         </div>
         <div class="card-content">
-          <p>A WordPress theme build from scratch. As the is designed for a videographer, the demo reel is displayed front and center.
+          <p>A WordPress theme build from scratch. As this was designed for a videographer, the demo reel is displayed front and center.
           </p>
         </div>
         <div class="card-action">
