--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -42,11 +42,11 @@
           <img class="activator" src="../../assets/img/wp.png">
         </div>
         <div class="card-content">
-          <span class="card-title activator">WordPess<i class="material-icons right">more_vert</i></span>
+          <span class="card-title activator">WordPress<i class="material-icons right">more_vert</i></span>
           <p>35-60/hr</p>
         </div>
         <div class="card-reveal">
-          <span class="card-title">WordPess Services<i class="material-icons right">close</i></span>
+          <span class="card-title">WordPress Services<i class="material-icons right">close</i></span>
           <ul class="collection">
             <li class="collection-item">Custom Theme Development</li>
             <li class="collection-item">Customize Existing Theme</li>
@@ -62,7 +62,7 @@
           <img class="activator" src="../../assets/img/node.png">
         </div>
         <div class="card-content">
-          <span class="card-title activator">Nodejs<i class="material-icons right">more_vert</i></span>
+          <span class="card-title activator">NodeJS<i class="material-icons right">more_vert</i></span>
           <p>50-75/hr</p>
         </div>
         <div class="card-reveal">
@@ -70,7 +70,7 @@
           <ul class="collection">
             <li class="collection-item">Angular</li>
             <li class="collection-item">React</li>
-            <li class="collection-item">Nodejs</li>
+            <li class="collection-item">NodeJS</li>
             <li class="collection-item">Express</li>
           </ul>
         </div>
