--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
       <div class="col l4 offset-l2 s12">
         <h5 class="white-text">Contact</h5>
         <ul>
-          <li><a class="grey-text text-lighten-3" href="linkedin.com/in/tracybryanlee" target="_blank">LinkedIn</a></li>
+          <li><a class="grey-text text-lighten-3" href="http://linkedin.com/in/tracybryanlee" target="_blank">LinkedIn</a></li>
           <li><a class="grey-text text-lighten-3" href="mailto:tleecoding@gmail.com?subject=Freelance%20Development">Email</a></li>
         </ul>
       </div>
@@ -17,7 +17,7 @@
   <div class="footer-copyright">
     <div class="container">
       © 2017
-      <a class="grey-text text-lighten-4 right" href="https://wordpress.org/">Made with &#10084; by tleecoding</a>
+      <a class="grey-text text-lighten-4 right" href="mailto:tleecoding@gmail.com?subject=Freelance%20Development">Made with &#10084; by tleecoding</a>
     </div>
   </div>
 </footer>
