--- a/src/app/pages/work/work.component.html
+++ b/src/app/pages/work/work.component.html
@@ -25,7 +25,7 @@
           <img src="../../assets/img/zorbas.png">
         </div>
         <div class="card-content">
-          <p>A WordPress theme build from scratch. As this was designed for a videographer, the demo reel is displayed front and center.
+          <p>A WordPress theme designed for a freelance videographer. The demo reel is the main selling point, thus it's displayed front and center.
           </p>
         </div>
         <div class="card-action">
@@ -39,7 +39,7 @@
           <img src="../../assets/img/brian.png">
         </div>
         <div class="card-content">
-          <p>A WordPress theme build from scratch built for a freelance designer. The user is able to navigate through ample amount of images at ease.</p>
+          <p>A WordPress theme built for a freelance print designer. The site's goal is to provide users simple navigation through images.</p>
         </div>
         <div class="card-action">
           <a href="http://brianweberdesign.com/" target="_blank"><i class="material-icons">language</i></a>
