--- a/src/styles.css
+++ b/src/styles.css
@@ -162,9 +162,12 @@ nav .brand-logo {
 }
 @media screen and (max-width: 480px) {
   section {
-    padding: 4rem 0;
+    padding: 4.8rem 0;
   }
   .nav-extended {
     position: fixed;
+  }
+  .home-section:not(:first-child):not(:last-child) {
+    padding: 0;
   }
 }
